@@ -163,6 +163,7 @@
 					<input type="checkbox" id="debug_show_obj"> Show object places<br>
 					<input type="checkbox" id="debug_show_type"> Show ground type<br>
 					<input type="checkbox" id="debug_show_grid"> Show cell grid<br>
+					<input type="checkbox" id="debug_show_fps"> Show game speed and FPS<br>
 					<input type="button" value="Add money" id="debug_add_money" /><br>
 					<input type="button" value="Add water" id="debug_add_water" />
 				</div>
