@@ -4,6 +4,13 @@ function Debuger()
 	this.show_obj = false;
 	this.show_type = false;
 	this.show_grid = false;
+	this.show_fps = false;
+	
+	this.run_counter = 0;
+	this.draw_counter = 0;
+	this.run_cache = 0;
+	this.fps_cache = 0;
+	this.count_time = 0;
 	
 	var me = this;
 	
@@ -19,6 +26,9 @@ function Debuger()
 	$('#debug_show_grid').click(function(){
 		me.show_grid = $(this).is(':checked');
 	});
+	$('#debug_show_fps').click(function(){
+		me.show_fps = $(this).is(':checked');
+	});
 	
 	$('#debug_add_money').click(function(){
 		game.players[PLAYER_HUMAN].addMoney(15000);
@@ -29,4 +39,33 @@ function Debuger()
 		if (obj)
 			obj.increaseRes(100);
 	});
+	
+	this.countRun = function()
+	{
+		this.run_counter++;
+	}
+	
+	this.countDraw = function()
+	{
+		this.draw_counter++;
+	}
+	
+	this.resetCounters = function()
+	{
+		var time = (new Date).getTime();
+		
+		this.fps_cache = parseInt(this.draw_counter / ((time - this.count_time) / 1000));
+		this.run_cache = parseInt(this.run_counter / ((time - this.count_time) / 1000));
+		
+		this.count_time = time;
+		this.draw_counter = 0;
+		this.run_counter = 0;
+	}
+	
+	this.drawFPS = function()
+	{
+		game.viewport_ctx.fillStyle = '#fff';
+		game.viewport_ctx.fillText('Game speed: ' + this.run_cache + ' (' + parseInt((this.run_cache/RUNS_PER_SECOND)*100) + '%)', 0, 10);
+		game.viewport_ctx.fillText('FPS: ' + this.fps_cache, 0, 20);
+	}
 }
