@@ -2,6 +2,7 @@ Build 26 (11.12.2012)
 - Freighter now can harvest
 - Removed Freighter sounds, because they same as Guardian sounds
 - Added water sell sound and water sell effect
+- Added debug option that allows to see game speed and FPS
 
 Build 25 (10.12.2012)
 - Added "Advanced Assembly Plant" building
